fixed project spacing

--- a/portfolio_4.7/style.css
+++ b/portfolio_4.7/style.css
@@ -53,6 +53,7 @@ body
 {
 	overflow-x:hidden;
 font-family: 'Open Sans', sans-serif;
+color:#333;
 /*	font-family:arial, sans-serif;*/
 /*	font-family: 'Lato', 'arial', sans-serif;
 */}
@@ -114,7 +115,6 @@ a, a:visited, a:active
 	font-weight:400;
 	font-size:2.5em;
 	line-height: 1.5em;
-	color:#888;
 }
 
 @media (max-width:700px)
@@ -138,10 +138,10 @@ a, a:visited, a:active
 	height:300px;
 	text-align: center;
 	font-weight:400;
-	color:#888;
 	font-size:5em;
 	display:table;
 	transition:400;
+	color:#333;
 }
 
 @media (max-width:700px)
@@ -173,12 +173,12 @@ a, a:visited, a:active
 	font-size:1.25em;
 	font-style: italic;
 	font-weight:400;
-	color:#888;
 	position: absolute;
 	margin: 0 auto;
 	left:0; right:0;
 	bottom:15px;
 	transition:400;
+	color:#333;
 }
 
 @media (max-width:700px)
@@ -200,6 +200,7 @@ a, a:visited, a:active
 {
 	font-size:1.25em;
 	line-height: 1.5em;
+	font-weight:400;
 	max-width:800px;
 	margin:auto;
 	padding-left:10px;
@@ -285,8 +286,7 @@ a, a:visited, a:active
 {
 	width:100%;
 	height:40px;
-	background-color: transparent;
-	color:#333;
+	background-color: #FFF;
 	position:fixed;
 	top:0;
 	left:0;
@@ -297,7 +297,7 @@ a, a:visited, a:active
 
 #navbar_container
 {
-	background-color:transparent;
+	background-color: #FFF;
 	margin:auto;
 	line-height: 40px;
 	text-align: center;
@@ -324,22 +324,11 @@ a, a:visited, a:active
 	cursor: pointer; cursor: hand;
 }
 
-#aboutbutton:hover
-{
-	color:#66cc33;
-}
-
 #workbutton
 {
 	transition:300;
 	cursor: pointer; cursor: hand;
 }
-
-#workbutton:hover
-{
-	color:#66cc33;
-}
-
 
 #navbar_container img
 {
@@ -371,7 +360,6 @@ a, a:visited, a:active
 	width:100%;
 	height:calc(100% - 40px);
 	font-weight:300;
-	color:#FFF;
 	overflow:auto;
 }
 
@@ -418,7 +406,6 @@ a, a:visited, a:active
 	background-image:url('Hydratile.jpg');
 	background-size:cover;
  	background-position: center center;
- 	color:#222;
 }
 /* END WORK ------------------------------------------*/
 
@@ -436,12 +423,11 @@ a, a:visited, a:active
 .project_container
 {
 	position:relative;
-	top:80px;
+	top:40px;
 	margin:auto;
 	text-align: center;
-	height:calc(100% - 80px);
+	height:calc(100% - 40px);
 	font-weight:300;
-	color:#555;
 	overflow:auto;
 	background-color: none;
 }
@@ -454,22 +440,15 @@ a, a:visited, a:active
 	margin-bottom:20px;
 	display:block;
 	margin:auto;
-}
-
-.project_title
-{
-	position:fixed;
-	margin:auto;
-	top:40px; left:0; right:0;
-	z-index: 10;
-	font-size:2em;
+	margin-bottom:20px;
+	margin-top:20px;
 }
 
 .project_caption
 {
 	width:100%;
-	margin-top:5px;
 	margin-bottom:50px;
+	font-weight:400;
 }
 
 .project_exitbutton
@@ -525,7 +504,6 @@ a, a:visited, a:active
 	text-align: center;
 	width:100%;
 	height:calc(100% - 40px);
-	color:#555;
 	overflow:auto;
 }
 
